front/src/assets/main.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

@import './css/button.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

::-webkit-scrollbar {
  display: none;
}

body {
  position: relative;
  display: block;
}

.bg-montceaux {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: -1;
  img {
    display: flex;
    width: 100vw;
    height: 100%;
    object-fit: cover;
  }
}

#app {
  @apply flex min-h-screen flex-col justify-between px-2 sm:px-4;
  font-family: 'Inter', sans-serif;
}

@layer components {
  main {
    @apply flex grow items-start;
  }

  .page {
    @apply mx-auto flex w-full flex-col items-center rounded-2xl bg-white p-4;
  }

  h1 {
    @apply font-bold;
  }

  h2 {
    @apply w-full font-bold;
  }

  form {
    @apply flex w-full flex-col gap-4;

    fieldset {
      @apply flex grow flex-col rounded-xl border p-2;

      legend {
        @apply p-2;
      }
    }

    label {
      @apply flex flex-col;

      input {
        @apply rounded-lg border border-gray-400 p-2;
        @apply disabled:border-gray-50 disabled:bg-gray-50;
      }

      select {
        @apply rounded-lg border border-gray-400 p-2;
        @apply disabled:border-gray-50 disabled:bg-gray-50;
      }

      span.error {
        @apply flex h-4 font-bold;
      }
    }

    div.error {
      @apply flex h-16 items-end justify-center font-bold;
    }
  }

  p {
    @apply w-full p-6;
  }
}

